--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 /.idea
-/home/rafaelbutler/Documentos/programm/php/Laravel-Vue/database/database.sqlite.vscode
+/.vscode
